make the windows script nicer, also support ES_MIN_MEM and ES_MAX_MEM as external settings for it